--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,11 @@ compile_sass = false
 # Disable search index for zh (not supported by default lunr)
 build_search_index = false
 
+taxonomies = [
+  { name = "tags", feed = true },
+  { name = "categories", feed = true }
+]
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
