--- a/config.toml
+++ b/config.toml
@@ -1,25 +1,9 @@
-# The URL the site will be built for
 base_url = "https://zhai-research.github.io"
 default_language = "zh"
-
-# Whether to automatically compile all Sass files in the sass directory
 compile_sass = false
-
-# Disable search index for zh (not supported by default lunr)
 build_search_index = false
 
-taxonomies = [
-  { name = "tags", feed = true },
-  { name = "categories", feed = true }
-]
-
-[markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
-
-[languages.en]
-build_search_index = true
+[markdown.highlighting]
+theme = "github-dark"
 
 [extra]
-# Put all your custom variables here
